--- a/index.html
+++ b/index.html
@@ -29,7 +29,22 @@
                     <button class="btn app-btn">Download App</button>
                 </div>
             </div>
-            <img class="banner-img" src="./images/banner.png" alt="banner">
+            <div class="banner-right">
+                <div>
+                    <img class="banner-img" src="./images/banner.png" alt="banner">
+                </div>
+                <div class="badge-1">
+                    <h1>500+</h1>
+                    <p>Free workout videos</p>
+                </div>
+                <div class="badge-2">
+                    <div class="badge-circle"></div>
+                    <div>
+                        <h1>350+</h1>
+                    <p>Video Tutorial</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </header>
     <main>
@@ -75,7 +90,146 @@
             </div>
         </section>
 
+        <!-- BMI Calculator section -->
+        <section class="bmi-section">
+            <div class="section-headline">
+                <h1 class="section-title">BMI Calculator</h1>
+                <p class="section-brief">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+                <div class="bmi-details">
+                    <div class="bmi-content flex">
+                        <div class="chart">
+                            <h3>BMI Calculator Chart</h4>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>BMI</th>
+                                        <th>Weight status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Below 18.5</td>
+                                        <td>Underweight</td>
+                                    </tr>
+                                    <tr>
+                                        <td>18.5 - 24.9</td>
+                                        <td>Healthy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25.0 - 29.9</td>
+                                        <td>Overweight</td>
+                                    </tr>
+                                    <tr>
+                                        <td>30.0 - and Above</td>
+                                        <td>Obese</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="calculation">
+                            <h3>Calculate your BMI</h3>
+                            <p class="section-brief">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                            <form class="bmi-form">
+                                <input type="text" placeholder="Height/cm">
+                                <input type="text" placeholder="Weight/kg">
+                                <input type="text" placeholder="Age">
+                                <select name="gender" id="gender">
+                                    <option disabled-selected>Sex</option>
+                                    <option value="gender">Male</option>
+                                    <option value="gender">Female</option>
+                                </select>
+                                <select name="activity" id="activity">
+                                    <option value="factor">Select an activity factor</option>
+                                </select>     
+                            </form>
+                            <button class="btn">Calculate</button>
+                        </div>
+                        
+                    </div>
+                </div>
+            
+        </section>
+
+        <!-- Meet Our Team -->
+        <section class="team-meeting">
+            <div class="section-headline">
+                <h1 class="section-title">Meet Our Team</h1>
+            <p class="section-brief">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="team-trainers">
+                <div class="trainer">
+                    <img src="./images/trainer1.png" alt="" class="trainer-img">
+                    <div class="trainer-info">
+                        <h3 class="trainer-name">Jerome Bell</h3>
+                        <p class="trainer-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer">
+                    <img src="./images/trainer2.png" alt="" class="trainer-img">
+                    <div class="trainer-info">
+                        <h3 class="trainer-name">Cameron Williamson</h3>
+                        <p class="trainer-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer">
+                    <img src="./images/trainer3.png" alt="" class="trainer-img">
+                    <div class="trainer-info">
+                        <h3 class="trainer-name">Darrell Steward</h3>
+                        <p class="trainer-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer">
+                    <img src="./images/trainer4.png" alt="" class="trainer-img">
+                    <div class="trainer-info">
+                        <h3 class="trainer-name">Dianne Russell</h3>
+                        <p class="trainer-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer">
+                    <img src="./images/trainer5.png" alt="" class="trainer-img">
+                    <div class="trainer-info">
+                        <h3 class="trainer-name">Cody Fisher</h3>
+                        <p class="trainer-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer">
+                    <img src="./images/trainer6.png" alt="" class="trainer-img">
+                    <div class="trainer-info">
+                        <h3 class="trainer-name">Teresa Webb</h3>
+                        <p class="trainer-description">Trainer</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer-section">
+            <div class="footer-details">
+                <div class="our-details">
+                    <h1 class="foot-head"><i>Fitness</i></h1>
+                    <p class="foot-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                </div>
+                <div class="contact-us">
+                    <h2>Get Started</h2>
+                    <a href="#" class="foot-desc">Service</a>
+                    <a href="#" class="foot-desc">Affiliate Program</a>
+                    <a href="#" class="foot-desc">Contact Us</a>
+                    <a href="#" class="foot-desc">About Us</a>
+                </div>
+                <div class="contact-us">
+                    <h2>Get Started</h2>
+                    <a href="#" class="foot-desc">Service</a>
+                    <a href="#" class="foot-desc">Affiliate Program</a>
+                    <a href="#" class="foot-desc">Contact Us</a>
+                    <a href="#" class="foot-desc">About Us</a>
+                </div>
+            </div>
+            <div>
+                <p class="footer-part"><small>All right reserved &#64;Fitness 2024</small></p>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
