given background into header section

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </nav>
         <section class="banner flex">
             <div class="banner-text-container">
-                <h1 class="banner-title">Get body in <br><span class="miniver-regular "><i>Shape</i></span> & stay healthy</h1>
-                <p class="banner-describe">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <h1 class="banner-title">Get body in <br><span class="miama"><i>Shape </i></span> & stay <br> healthy</h1>
+                <p class="banner-describe">To get in shape and stay healthy, maintain a balanced diet, exercise regularly, stay hydrated, get enough sleep, manage stress, and be consistent with these habits for overall well-being.</p>
                 <div>
-                    <button class="btn">Join Club Now!</button>
-                    <button class="btn app-btn">Download App</button>
+                    <button class="btn"><a href="#">Join Club Now!</a></button>
+                    <button class="btn app-btn"><a href="#">Download App</a></button>
                 </div>
             </div>
             <div class="banner-right">
@@ -52,49 +52,48 @@
         <section class="habits">
             <div class="section-headline">
                 <h1 class="section-title">Change Your Habits</h1>
-                <p class="section-brief">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="section-brief">Transforming your fitness habits means adopting consistent, sustainable practices for long-term health and better results.</p>
             </div>
             <div class="fitness-habits">
                 <div class="fitness flex">
                     <img src="./images/image 2.png" alt="" class="fitness-img">
                     <h3>Movement</h3>
-                    <p class="fitness-describe">We believe fitness should be accessible to everyone</p>
+                    <p class="fitness-describe">Elevate Your Health and Wellness</p>
                 </div>
                 <div class="fitness flex">
                     <img src="./images/image 3.png" alt="" class="fitness-img">
                     <h3>Time</h3>
-                    <p class="fitness-describe">We believe fitness should be accessible to everyone</p>
+                    <p class="fitness-describe">Maximize Your Fitness Time for Optimal Results</p>
                 </div>
                 <div class="fitness flex">
                     <img src="./images/image 4.png" alt="" class="fitness-img">
                     <h3>Practice</h3>
-                    <p class="fitness-describe">We believe fitness should be accessible to everyone</p>
+                    <p class="fitness-describe">Mastering Effective Fitness Practices</p>
                 </div>
                 <div class="fitness flex">
                     <img src="./images/image 5.png" alt="" class="fitness-img">
                     <h3>Weight Loss</h3>
-                    <p class="fitness-describe">We believe fitness should be accessible to everyone</p>
+                    <p class="fitness-describe">Effective Strategies for Fitness and Weight Loss</p>
                 </div>
             </div>
         </section>
 
         <!-- Run an Extra Mile Easily -->
         <section class="about-running flex">
-            <div class="run-info flex">
                 <div class="mile-side">
                     <h1 class="run-title">Run an Extra <br>Mile Easily</h1>
-                    <p class="run-brief">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
-                    <button class="btn">Join Now</button>
+                    <p class="run-brief">Everyday early morning running loses your extra fat and weight. Normally, I would like to prefer you to do everyday running upto 1 mile which assist to gain extra energy for health. It also improves cardiovascular health, enhances overall fitness, boosts mood and mental well-being.</p>
+                    <button class="btn"><a href="#">Join Now</a></button>
                 </div>
                 <img class="run-img" src="./images/run.jpg" alt="">
-            </div>
+              
         </section>
 
         <!-- BMI Calculator section -->
         <section class="bmi-section">
             <div class="section-headline">
                 <h1 class="section-title">BMI Calculator</h1>
-                <p class="section-brief">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="section-brief">A BMI calculator is used to assess body weight relative to height and determine if a person is underweight, normal weight, overweight or obese.</p>
             </div>
                 <div class="bmi-details">
                     <div class="bmi-content flex">
@@ -129,7 +128,7 @@
                         </div>
                         <div class="calculation">
                             <h3>Calculate your BMI</h3>
-                            <p class="section-brief">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                            <p class="section-brief">To calculate BMI, divide your weight in kilograms by your height in meters squared.</p>
                             <form class="bmi-form">
                                 <input type="text" placeholder="Height/cm">
                                 <input type="text" placeholder="Weight/kg">
@@ -143,7 +142,7 @@
                                     <option value="factor">Select an activity factor</option>
                                 </select>     
                             </form>
-                            <button class="btn">Calculate</button>
+                            <button class="btn"><a href="#">Calculate</a></button>
                         </div>
                         
                     </div>
@@ -155,7 +154,7 @@
         <section class="team-meeting">
             <div class="section-headline">
                 <h1 class="section-title">Meet Our Team</h1>
-            <p class="section-brief">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <p class="section-brief">Meet our team members without any hesitation and Follow up their given instructions regularly.</p>
             </div>
             <div class="team-trainers">
                 <div class="trainer">
@@ -209,21 +208,19 @@
             <div class="footer-details">
                 <div class="our-details">
                     <h1 class="foot-head"><i>Fitness</i></h1>
-                    <p class="foot-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <p class="foot-desc">Fitness involves regular physical activity, balanced nutrition, and adequate rest to improve overall health and well-being.</p>
                 </div>
                 <div class="contact-us">
-                    <h2>Get Started</h2>
-                    <a href="#" class="foot-desc">Service</a>
+                    <h3>Services</h3>
                     <a href="#" class="foot-desc">Affiliate Program</a>
                     <a href="#" class="foot-desc">Contact Us</a>
                     <a href="#" class="foot-desc">About Us</a>
                 </div>
                 <div class="contact-us">
-                    <h2>Get Started</h2>
-                    <a href="#" class="foot-desc">Service</a>
-                    <a href="#" class="foot-desc">Affiliate Program</a>
-                    <a href="#" class="foot-desc">Contact Us</a>
-                    <a href="#" class="foot-desc">About Us</a>
+                    <h3>Legal</h3>
+                    <a href="#" class="foot-desc">Terms of use</a>
+                    <a href="#" class="foot-desc">Privacy policy</a>
+                    <a href="#" class="foot-desc">Cookie policy</a>
                 </div>
             </div>
             <div>
