added unique section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p class="banner-describe">To get in shape and stay healthy, maintain a balanced diet, exercise regularly, stay hydrated, get enough sleep, manage stress, and be consistent with these habits for overall well-being.</p>
                 <div>
                     <button class="btn"><a href="#">Join Club Now!</a></button>
-                    <button class="btn app-btn"><a href="#">Download App</a></button>
+                    <button class="btn"><a href="#">Download App</a></button>
                 </div>
             </div>
             <div class="banner-right">
@@ -48,6 +48,16 @@
         </section>
     </header>
     <main>
+        <!-- our story -->
+        <section>
+            <div class="about-story flex">
+                <img src="./images/story-img.webp" alt="story-img">
+                <div>
+                    <h1 class="run-title">Story About US</h1>
+                    <p class="run-brief">In a bustling city, a new fitness center opened its doors, attracting people of all ages. With state-of-the-art equipment and diverse classes, it quickly became a community hub. Trainers motivated members, fostering friendships and healthy habits. The center hosted events, from yoga retreats to charity marathons, creating a vibrant atmosphere. Over time, it expanded, adding more facilities and personalized programs. The fitness center transformed lives, proving that health and wellness could bring people together in pursuit of their best selves.</p>
+                </div>
+            </div>
+        </section>
         <!-- Change Your Habits section -->
         <section class="habits">
             <div class="section-headline">
@@ -83,7 +93,7 @@
                 <div class="mile-side">
                     <h1 class="run-title">Run an Extra <br>Mile Easily</h1>
                     <p class="run-brief">Everyday early morning running loses your extra fat and weight. Normally, I would like to prefer you to do everyday running upto 1 mile which assist to gain extra energy for health. It also improves cardiovascular health, enhances overall fitness, boosts mood and mental well-being.</p>
-                    <button class="btn"><a href="#">Join Now</a></button>
+                    <button class="btn running-btn"><a href="#">Join Now</a></button>
                 </div>
                 <img class="run-img" src="./images/run.jpg" alt="">
               
@@ -142,7 +152,7 @@
                                     <option value="factor">Select an activity factor</option>
                                 </select>     
                             </form>
-                            <button class="btn"><a href="#">Calculate</a></button>
+                            <button class="btn running-btn"><a href="#">Calculate</a></button>
                         </div>
                         
                     </div>
