changed unique section

--- a/index.html
+++ b/index.html
@@ -48,13 +48,27 @@
         </section>
     </header>
     <main>
-        <!-- our story -->
-        <section>
-            <div class="about-story flex">
-                <img src="./images/story-img.webp" alt="story-img">
-                <div>
-                    <h1 class="run-title">Story About US</h1>
-                    <p class="run-brief">In a bustling city, a new fitness center opened its doors, attracting people of all ages. With state-of-the-art equipment and diverse classes, it quickly became a community hub. Trainers motivated members, fostering friendships and healthy habits. The center hosted events, from yoga retreats to charity marathons, creating a vibrant atmosphere. Over time, it expanded, adding more facilities and personalized programs. The fitness center transformed lives, proving that health and wellness could bring people together in pursuit of their best selves.</p>
+        <!-- pricing plans -->
+        <section class="plans-section">
+            <div class="section-headline">
+                <h1 class="section-title">Pricing Plans</h1>
+                <p class="section-brief">Fitness Package monthly fee only applies to members of the contract and to fixed e-bill payment contract.</p>
+            </div>
+            <div class="price-cards">
+                <div class="price-card flex">
+                    <h1>Noob <br> Package</h1>
+                    <p class="fitness-describe">Visit all clubs including the gym and group classes during business days from 6.30am to 3pm.</p>
+                    <button class="price-btn">$30</button>
+                </div>
+                <div class="price-card flex">
+                    <h1>Xtreme <br> Package</h1>
+                    <p class="fitness-describe">Visit all clubs including the gym and group classes anytime within the working hours of the clubs.</p>
+                    <button class="price-btn">$50</button>
+                </div>
+                <div class="price-card flex">
+                    <h1>Youth <br> Package</h1>
+                    <p class="fitness-describe">Youth persons are entitled to visit all clubs without a time limitation during working hours.</p>
+                    <button class="price-btn">$35</button>
                 </div>
             </div>
         </section>
