--- a/index.html
+++ b/index.html
@@ -234,17 +234,19 @@
                     <h1 class="foot-head"><i>Fitness</i></h1>
                     <p class="foot-desc">Fitness involves regular physical activity, balanced nutrition, and adequate rest to improve overall health and well-being.</p>
                 </div>
-                <div class="contact-us">
-                    <h3>Services</h3>
-                    <a href="#" class="foot-desc">Affiliate Program</a>
-                    <a href="#" class="foot-desc">Contact Us</a>
-                    <a href="#" class="foot-desc">About Us</a>
-                </div>
-                <div class="contact-us">
-                    <h3>Legal</h3>
-                    <a href="#" class="foot-desc">Terms of use</a>
-                    <a href="#" class="foot-desc">Privacy policy</a>
-                    <a href="#" class="foot-desc">Cookie policy</a>
+                <div class="foot-info flex">
+                    <div class="contact-us flex">
+                        <h3>Services</h3>
+                        <a href="#" class="foot-desc">Affiliate Program</a>
+                        <a href="#" class="foot-desc">Contact Us</a>
+                        <a href="#" class="foot-desc">About Us</a>
+                    </div>
+                    <div class="contact-us flex">
+                        <h3>Legal</h3>
+                        <a href="#" class="foot-desc">Terms of use</a>
+                        <a href="#" class="foot-desc">Privacy policy</a>
+                        <a href="#" class="foot-desc">Cookie policy</a>
+                    </div>
                 </div>
             </div>
             <div>
